--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-
-    "axios": "^1.7.2",
-
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
-
+    "axios": "^1.7.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "material-icons": "^1.13.12",
@@ -26,6 +23,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
